--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vee-validate/zod": "^4.13.2",
-    "@vueuse/core": "^11.1.0",
-    "class-variance-authority": "^0.7.0",
+    "@vueuse/core": "^11.3.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.447.0",
     "radix-vue": "^1.9.6",
-    "tailwind-merge": "^2.5.3",
+    "reka-ui": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
